--- a/assets/styles/layout/pages/laFrancaise/_header3.scss
+++ b/assets/styles/layout/pages/laFrancaise/_header3.scss
@@ -1,5 +1,6 @@
 .backgroundLaFrancaise {
-    background: url(/assets/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg) center/cover;
-    height: 275px;
-    min-width: 375px ;
+  background: url(/assets/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg)
+    center/cover;
+  height: 275px;
+  min-width: 375px;
 }
