--- a/assets/styles/layout/pages/laPalette/_main1.scss
+++ b/assets/styles/layout/pages/laPalette/_main1.scss
@@ -1,218 +1,207 @@
 .card-menu1 {
-    position: absolute;
-    top: 290px;
-    padding-bottom: 40px;
-    padding-top: 32px;
-    width: 100%;
-    background: $gray1;
-    border-radius: 25px ;
+  position: absolute;
+  top: 290px;
+  padding-bottom: 40px;
+  padding-top: 32px;
+  width: 100%;
+  background: $gray1;
+  border-radius: 25px;
+  display: flex;
+  flex-direction: column;
+  max-width: 1050px;
+  .card-entree {
+    animation: entree 1s forwards;
+    gap: 13px;
     display: flex;
     flex-direction: column;
-    max-width: 1050px;
-    .card-entree {
-        animation: entree 1s forwards;
-        gap: 13px;
-        display: flex;
-        flex-direction: column;
+  }
+  .card-plat {
+    animation: entree 2s forwards;
+    gap: 13px;
+    display: flex;
+    flex-direction: column;
+  }
+  .card-dessert {
+    animation: entree 3s forwards;
+    gap: 13px;
+    display: flex;
+    flex-direction: column;
+  }
+  .card-menus {
+    display: flex;
+    align-items: center;
+    width: 108%;
+
+    label {
+      display: flex;
+      width: 100%;
     }
-    .card-plat {
-        animation: entree 2s  forwards;
-        gap: 13px;
-        display: flex;
-        flex-direction: column;
+  }
+
+  input[type="checkbox"]:checked + label {
+    .prix {
+      transform: translateX(-50px);
     }
-    .card-dessert {
-        animation: entree 3s forwards;
-        gap: 13px;
-        display: flex;
-        flex-direction: column;
+
+    .sous-titre {
+      width: 70%;
     }
-    .card-menus {
+    .description-plat {
+      width: 75%;
+    }
+  }
+  input[type="checkbox"]:checked + label .valid {
+    transform: translate(-50px);
+    background: $cyan1;
+    i {
+      background: white;
+      color: $cyan1;
+    }
+  }
+  h2 {
+    font-family: $title;
+    font-style: italic;
+    font-weight: 400;
+    margin-left: 17px;
+  }
+  .card-menu1-head {
+    display: flex;
+    align-items: center;
+    input[type="checkbox"]:checked + label .fa-heart {
+      background: linear-gradient(#9356dc, #ff79da);
+      background-clip: text;
+      color: transparent;
+      transform: scale(1.1);
+      animation: like 0.5s linear forwards;
+    }
+    label {
+      position: absolute;
+      top: 40px;
+      right: 40px;
+    }
+  }
+  .card-choice {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    margin: 0 13px;
+    .plat {
+      height: 27px;
+      font-weight: 300;
+      margin-top: 40px;
+      position: relative;
+      &::after {
+        position: absolute;
+        content: "";
+        width: 40px;
+        border-bottom: 3px solid $cyan1;
+        left: 0;
+        top: 27px;
+      }
+
+      input[type="checkbox"]:checked + label .valid i {
+        background: white;
+        color: $cyan1;
+      }
+      .card-menus {
         display: flex;
         align-items: center;
-        width: 108%;
-        
+
         label {
-            display: flex;
-            width: 100%;
+          display: flex;
         }
+      }
     }
-
-    input[type="checkbox"]:checked + label{
-        span{
-        transform: translateX(-50px);
-        }
-        p,h3{
-            width: 75%;
-        }
-
-} 
-    input[type="checkbox"]:checked + label #valid{
-            
-                transform: translate(-50px);
-                background: $cyan1;
-                i {
-                    background: white;
-                    color: $cyan1;
-                }
-                
-        }
-
-        
-
-    h2 {
-        font-family: $title;
-        font-style: italic;
-        font-weight: 400;
-        margin-left: 17px;
-    }
-    .card-menu1-head {
-        display: flex;
-        align-items: center;
-        input[type="checkbox"]:checked + label .fa-heart {
-            background: linear-gradient( #9356DC, #FF79DA);
-            background-clip: text;
-            color: transparent;
-            transform: scale(1.1);
-            animation: like 0.5s linear forwards;
-           }
-        label {
-            position: absolute;
-            top: 40px;
-            right: 40px;
-        }
-    }
-    .card-choice {
-        display: flex;
-        flex-direction: column;
-        gap: 12px;
-        margin: 0 13px;
-        .plat {
-            height: 27px;
-            font-weight: 300;
-            margin-top: 40px;
-            position: relative;
-            &::after {
-                position: absolute;
-                content: "";
-                width: 40px;
-                border-bottom: 3px solid $cyan1 ;
-                left: 0;
-                top: 27px;
-            }
-           
-        input[type="checkbox"]:checked + label #valid i{
-            background: white;
-            color: $cyan1;
-        }
-        .card-menus {
-            display: flex;
-            align-items: center;
-            
-            label {
-                display: flex;
-            }
-        }}
-        .card-menu {
-            width: 100%;
-            background: white;
-            box-shadow: 0px 4.01149px 15.0431px rgba(0, 0, 0, 0.1);
-            border-radius: 15.0431px;
-            display: grid;
-            grid-template-columns: 90% 10%;
-            grid-template-areas: "a1  a1"
-            "a2  a3";
-            padding: 15px;
-            gap: 5px;
-            h3{
-                grid-area: a1;
-                font-weight: 500;
-                font-size: 18px;
-                white-space: nowrap;
-                overflow: hidden;
-                text-overflow: ellipsis;
-            }
-            p{
-                grid-area: a2;
-                font-size: 15px;
-                white-space: nowrap;
-                overflow: hidden;
-                text-overflow: ellipsis;
-            }
-            span{
-                grid-area: a3;
-                font-weight: 700;
-                transition: 0.4s;
-                
-            
-            }
-           
-        }
-    #valid {
-        
-        background: var(--gray1);
-        width: 59px;
-        height: 77px;
-        border-radius: 0 15px 15px 0;
+    .card-menu {
+      width: 100%;
+      background: white;
+      box-shadow: 0px 4.01149px 15.0431px rgba(0, 0, 0, 0.1);
+      border-radius: 15.0431px;
+      display: grid;
+      grid-template-columns: 90% 10%;
+      grid-template-areas:
+        "a1  a1"
+        "a2  a3";
+      padding: 15px;
+      gap: 5px;
+      .sous-titre {
+        grid-area: a1;
+        width: 80%;
+        font-weight: 500;
+        font-size: 18px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+      .description-plat {
+        grid-area: a2;
+        font-size: 15px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        width: 90%;
+      }
+      .prix {
+        grid-area: a3;
+        font-weight: 700;
         transition: 0.4s;
-        display: flex;
-        justify-content: center;
-        align-items: center;   
-        i {
-            color: $gray1; 
-            border-radius: 100px;
-            font-size: 1.5rem;
-        } 
+      }
+    }
+    .valid {
+      background: var(--gray1);
+      width: 59px;
+      height: 77px;
+      border-radius: 0 15px 15px 0;
+      transition: 0.4s;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      i {
+        color: $gray1;
+        border-radius: 100px;
+        font-size: 1.5rem;
+      }
     }
     button {
-        @include button ;
-        margin: 40px auto;
-        &:hover{
-        @include buttonHover ;
-        
-
-        }
-    }   
+      @include button;
+      margin: 40px auto;
+      &:hover {
+        @include buttonHover;
+      }
     }
- 
+  }
 
-
-
- @media (min-width: 767px) {
-    
+  @media (min-width: 767px) {
     align-items: center;
     .card-menu1-head label {
-        position: static;
-        margin-left: 24px;
+      position: static;
+      margin-left: 24px;
     }
-    .card-choice{
-        
-    .card-menu{
+    .card-choice {
+      .card-menu {
         width: 634px;
         display: grid;
         grid-template-columns: 95% 5%;
+      }
     }
- }
-    
+  }
 }
- }
- @media (min-width: 1050px) {
-
-    .card-menu1-head {
-        justify-content: center;
-        label{
-            position: static;
-            margin-left: 30px;
-        }
+@media (min-width: 1050px) {
+  .card-menu1-head {
+    justify-content: center;
+    label {
+      position: static;
+      margin-left: 30px;
     }
-        .card-choice{
-            align-items: center;  
-             text-align: left;
-        .plat{
-           width: 634px ;
-        }
-            .card-menus {
-                width: 634px;
-            }
-        } 
- }
+  }
+  .card-choice {
+    align-items: center;
+    text-align: left;
+    .plat {
+      width: 634px;
+    }
+    .card-menus {
+      width: 634px;
+    }
+  }
+}
